# projet_5_github

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  data_merge.csv  data_merge_p2.csv  docker-compose.yml  pyproject.toml  script.py
.github/workflows/: ci.yml
app/: api.py  database.py  main.py  migrate.py  models.py  routes.py  schemas.py  seed.py
database/: schema.sql
models/: model  model.pkl  model_joblib
test/: conftest.py  test_api.py  test_database.py  test_main.py  test_migrate.py  test_models.py  test_routes.py  test_seed.py
